2001-03-29  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* amd/amd.h, amd/amfs_auto.c, amd/conf.c,
	doc/am-utils.texi,
	scripts/amd.conf-sample, scripts/amd.conf.5:
	renamed selectors_on_default to selectors_in_defaults,
	kept the former as a deprecated option;
	renamed CFM_ENABLE_DEFAULT_SELECTORS to CFM_SELECTORS_IN_DEFAULTS;
	renamed gopt_selectors_on_default() to gopt_selectors_in_defaults()

	* include/am_utils.h: made D_ALL *not* include D_MTAB

2001-03-19  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* amd/amfs_toplvl.c, amd/amfs_auto.c, amd/srvr_nfs.c,
	include/am_utils.h: compile fixes for --enable-debug=no

2001-03-15  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* NEWS: updated

	* README.autofs: updated

	* conf/mount/mount_linux.c (linux_version_code): export the fn

	* conf/nfs_prot/nfs_prot_linux.h: ditto

	* conf/autofs/autofs_linux.c (create_autofs_service): verify the
	kernel version here, and turn off bind_works if the kernel is
	older than 2.4.0.
	(autofs_link_mount): don't touch bind_works here, it's useless
	b/c we're in a child process; remove the mountpoint directory if
	the bind mount fails

	* amd/opts.c (eval_fs_opts): changed some annoying debugging plogs
	into dlogs

	* conf/autofs/autofs_linux.c (autofs_link_mount): zero out the
	mntent struct before initializing it

2001-03-14  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/mount/mount_linux.c (parse_opts): added support for lofs
	(mount_linux): support lofs through bind mounts and/or FiST lofs

	* scripts/ctl-hlfsd.in: search for /var/spool/mail in addition to
	/var/mail and /usr/spool/mail

	* conf/nfs_prot/nfs_prot_linux.h (MS_BIND): add define for it, if
	kernel is newer than 2.4.0
	(MNTTYPE_LOFS): ditto

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_link_umount): new stub
	(autofs_lookup_failed): removed stub

	* conf/autofs/autofs_linux.c (autofs_lookup_failed): moved up in
	the file, made static;