@@ -38,7 +38,7 @@
 .\"
 .\"	%W% (Berkeley) %G%
 .\"
-.\" $Id: amd.conf.5,v 1.10 2001/01/10 03:22:33 ezk Exp $
+.\" $Id: amd.conf.5,v 1.11 2001/04/07 00:36:06 ib42 Exp $
 .\"
 .TH AMD.CONF 8 "7 August 1997"
 .SH NAME
@@ -478,8 +478,8 @@ mounted.  Whenever one of these would have been auto-mounted,
 inherits it.
 
 .TP
-.BR selectors_on_default " (boolean, default=no)"
-If "yes", then the /default entry of maps will be look for and process any
+.BR selectors_in_defaults " (boolean, default=no)"
+If "yes", then the /defaults entry of maps will search for and process any
 selectors before setting defaults for all other keys in that map.  Useful
 when you want to set different options for a complete map based on some
 parameters.  For example, you may want to better the NFS performance over
@@ -490,6 +490,8 @@ slow slip-based networks as follows:
     wire==slip-net;opts:=intr,rsize=1024,wsize=1024 \\
     wire!=slip-net;opts:=intr,rsize=8192,wsize=8192
 .fi
+
+Deprecated form: selectors_on_default
 
 .TP
 .BR show_statfs_entries " (boolean), default=no)"
@@ -544,7 +546,7 @@ log_file =               /var/log/amd
 log_options =            all
 #debug_options =         all
 plock =                  no
-selectors_on_default =   yes
+selectors_in_defaults =  yes
 # config.guess picks up "sunos5" and I don't want to edit my maps yet
 os =                     sos5
 # if you print_version after setting up "os", it will show it.
